--- a/css/style6.css
+++ b/css/style6.css
@@ -1,14 +1,20 @@
-html,body,div,p,span,h1,h2,h3,h4,h5,h6,header,footer,figure,img,caption,figcaption,ul,ol,li{
+html,body,div,p,span,h1,h2,h3,h4,h5,h6,header,footer,figure,img,caption,figcaption,ul,ol,li,label{
 	margin: 0;
 	padding: 0;
 }
-body{
+html{
 	width: 980px;
 	height: 1386px;
+}
+body{
+	box-sizing: border-box;
+	width: 892px;
+	margin: 0 auto;
 }
 header{
 	width: 892px;
 	border-bottom: 2px solid #938e8c;
+	margin-bottom: 34px;
 }
 header span{
 	box-sizing:border-box;
@@ -25,4 +31,333 @@ header time{
 	font: 12px 黑体;
 	color: #d45d5c;
 	float: right;
+}
+.left-big{
+	box-sizing: border-box;
+	float: left;
+	/*margin-top: 34px;*/
+	width: 641px;
+	height: 301px;
+}
+.left-big img{
+	margin-left: -191px;
+	margin-right: -191px;
+}
+.left,.right{
+	width: 191px;
+	height: 301px;
+	opacity: 0.5
+}
+.left{
+	float: left;
+	background-color: #428c59;
+
+}
+.right{
+	float: right;
+	background-color: #cc7680;
+	
+}
+.label{
+	box-sizing: border-box;
+	display: inline-block;
+	/*margin-top: 34px;*/
+	margin-left: 48px;
+	width: 203px;
+	height: 301px;
+	border-top: 2px solid #cc8091;
+}
+.label div:nth-child(1){
+	font: 19px "microsoft yahei";
+	color: #000;
+	/*line-height: 40px;*/
+}
+.label div:nth-child(1) p{
+	display: inline-block;
+	border-bottom: 2px solid #555353;
+}
+.label div:nth-child(1) p:first-letter{
+	font-size: 24px;
+}
+.label div:nth-child(2){
+	font: 12px "楷体";
+	color: #676767;
+	line-height: 10px;
+}
+.label div:nth-child(3){
+	font: italic 116px "微软雅黑";
+	color: #75b86b;
+}
+.label div:nth-child(4){
+}
+.label div:nth-child(4) p:nth-child(1){
+	display: inline-block;
+	font: 55px "微软雅黑";
+	color: #cc8091;
+}
+.label div:nth-child(4)>div{
+	display: inline-block;
+}
+.label div:nth-child(4)>div p:nth-child(1){
+	font: 21px "微软雅黑";
+	color: #cc8091;
+}
+.label div:nth-child(4)>div p:nth-child(2){
+	font: 12px "微软雅黑";
+	color: #bcbbba;
+}
+.content{
+	font: 12px "微软雅黑";
+	line-height: 16px;
+}
+.content h2{
+	font-size: 16px;
+	font-weight: bold;
+	text-decoration: underline;
+}
+.what h2{
+	color: #418c59;
+}
+.what{
+	float: left;
+	width: 228px;
+	color: #767777;
+}
+.when h2{
+	color: #d2994f;
+}
+.when{
+	float: left;
+	width: 205px;
+	color: #231815;
+	margin: 0 28px;
+	opacity: 0.7;
+}
+.how h2{
+	color: #cc7680;
+}
+.how{
+	float: left;
+	width: 132px;
+	opacity: 0.7;
+}
+.how span{
+	color: #cd4a48;
+	line-height: 16px;
+	font-style: italic;
+}
+.how div {
+	margin-top: 29px;
+}
+h2.title{
+	box-sizing:border-box;
+	padding-right: 60px;
+	width: 415px;
+	border-bottom: 2px solid #10456b;
+}
+.title span:nth-child(1){
+	font: italic bold 72px "黑体";
+	color: #f5e327;
+}
+.title span:nth-child(2){
+	font: bold 42px/16px "黑体";
+	color: #11456b;
+}
+.title span:nth-child(3){
+	display: block;
+	font: bold 33px "黑体";
+	color: #11456b;
+}
+.main{
+	width: 415px;
+	height: 427px;
+	overflow: hidden;	
+}
+.main p{
+	font: 12px/16px "宋体";
+	color: #767777;
+	/*text-indent: 2em;*/
+}
+.main img{
+	float: right;
+	margin: 22px;
+}
+.first-letter:first-letter{
+	font: 70px "微软雅黑";
+	color: #f5e327;
+	margin: 0 7px 7px 0;
+}
+.not-first{
+	text-indent: 2em;
+}
+.left-bottom{
+	width: 415px;
+	box-sizing:border-box;
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+
+
+.right-bottom{
+	box-sizing:border-box;
+	float: left;
+	margin-top: 31px;
+	margin-left: 19px;
+	width: 458px;
+	height: 605px;
+}
+.right-bottom>div:first-child{
+	position: relative;
+}
+.right-bottom-title{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 458px;
+	height: 61px;
+	line-height: 61px;
+	background-color: rgba(0,0,4,0.4);
+}
+i{
+	display: inline-block;
+	width: 3px;
+	height: 44px;
+	background-color: #72b16a;
+	vertical-align: middle;
+	margin-left: 38px;
+
+}
+.right-bottom-title span:nth-child(2){
+	font: 26px "微软雅黑";
+	color: #fff;
+	/*display: none;*/
+}
+.right-bottom-title span:nth-child(3){
+	font: italic 12px "微软雅黑";
+	letter-spacing: 140%;
+	color: #72b16a;
+	/*display: none;*/
+
+}
+
+
+
+.right-bottom-div{
+	position: relative;
+	box-sizing:border-box;
+	padding-top: 30px;
+	width: 459px;
+	height: 318px;
+	margin-top: 30px;
+	background-color: #eeedd6;
+}
+.right-bottom-div ul{
+	margin-left: 30px;
+	margin-top: 30px;
+	list-style-image: url(../img/img5.png);
+	list-style-position: inside;
+	margin-top: 30px;
+}
+.right-bottom-div li{
+	margin-top: 20px;
+}
+.left-s{
+	display: inline-block;
+	font: 16px "宋体";
+	color: #5a5b5b;
+}
+.right-s{
+	display: inline-block;
+	float: right;
+	font: italic 12px "宋体";
+	color: #5a5b5b;
+	margin-right: 21px;
+}
+
+
+/*红色小块*/
+.right-div-label{
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	box-sizing:border-box;
+	width: 260px;
+	height: 160px;
+	background-color: #d45d5c;
+	color: #fff;
+	/*line-height: 160px;*/
+}
+.right-div-label>span:first-child{
+	display: inline-block;
+	font: 110px "微软雅黑";
+	color: #fff;
+	margin-left: 14px;
+	/*line-height: 160px;*/
+}
+.right-div-label>span:nth-child(2){
+	display: inline-block;
+	width: 2px;
+	height: 86px;
+	background-color: #fff;
+}
+.right-div-label>div{
+	display: inline-block;
+}
+.right-div-label>div p:first-child,.right-div-label>div p:nth-child(2){
+	font: italic 21px "黑体";
+	color: #fff;
+}
+.right-div-label>div p:nth-child(3),.right-div-label>div p:nth-child(4){
+	font: 12px "黑体";
+	color: #fff;
+	margin-bottom: 3px;
+}
+/*红色小块结束*/
+
+/*hello world*/
+.right-div-content{
+	position: absolute;
+	right: 20px;
+	bottom: 39px;
+	font: italic 14px "黑体";
+	color: #5a5b5b;
+}
+.right-div-content span{
+	font: 72px "黑体";
+	color: #d45d5c;
+}
+.right-div-content p:nth-child(1),.right-div-content p:nth-child(6){
+}
+.right-div-content p:nth-child(1){
+	text-align: right;
+}
+.span1{
+	position: absolute;
+	top: -19px;
+	left: -36px;
+}
+.span2{
+	position: absolute;
+	right: -43px;
+	bottom: -62px;
+}
+/*hello world*/
+footer{
+	position: relative;
+	width: 892px;
+	border-top: 1px solid #938e8c;
+	box-sizing:border-box;
+	display: inline-block;
+	width: 892px;
+	height: 61px;
+	margin-top: 40px;
+	font: 12px 黑体;
+	color: #d45d5c;
+	padding: 46px 27px 6px 7px;
+}
+footer span{
+	position: absolute;
+	top: 0;
+	right: 0;
 }
